tests/errors/const_div_overflow.vt
const MIN: int = -9223372036854775807 - 1;
const BAD: int = MIN / -1;
fn main() { print("" + BAD); }
